# jskse

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE.md  README.md  build.rs  justfile  vcpkg-configuration.json  vcpkg.json
cmake/: Version.h.in  rust.cmake  sourcelist.cmake  ultralight.cmake
crates/jskse_core/: Cargo.toml  build.rs  cxx.rs  event_loop.rs  js.rs  js_mod.rs  lib.rs  module_loader.rs  skse_poly.rs
crates/jskse_core/bridge/: cosave.rs  logs.rs  mod.rs  rimgui.rs  wrappers.rs
crates/jskse_core/bridge/clib/: mod.rs  re.rs  rel.rs  skse.rs
crates/jskse_core/js/: mod.rs
crates/jskse_core/js/globals/: console.rs  mod.rs
crates/jskse_core/lib/: deno.json  runtime.js
crates/jskse_core/ops/: console.rs
crates/jskse_core/src/: cxx.rs  event_loop.rs  js_mod.rs  lib.rs  module_loader.rs
crates/jskse_core/src/bridge/: logs.rs  mod.rs  rimgui.rs  strings.rs
crates/jskse_core/src/ui/: mod.rs
crates/jskse_core/ui/: mod.rs
crates/jskse_modules/: Cargo.toml
crates/jskse_modules/globals/: console.rs  mod.rs
crates/skse_bindings/: Cargo.toml  lib.rs
include/: PCH.h  graphics.h  hook_builder.h  jskse_core.h  log.h  macrel.h  util.h
include/bindgen/: clib.rs.h
include/bridge/: hooks.h  rimgui.h  sinks.h
include/skse/: cosave.h  hooks.h  papyrus.h  sinks.h
src/: main.cpp  util.cpp
src/bridge/: cosave.cpp  hooks.cpp  js.hpp  papyrus.cpp  rimgui.cpp  sinks.cpp
src/skse/: cosave.cpp  hooks.cpp  hooks.h  papyrus.cpp  sinks.cpp
src/util/: log.h  util.cpp
