[workspace.package]
edition = "2021"
name = "jskse"
rust-version = "1.71.1"
version = "1.0.0"
license = "ParityLicense-7.0"
authors = ["ItsSpyce"]
repository = "https://github.com/ItsSpyce/jskse"

[workspace]
resolver = "2"
members = ["packages/jskse_core", "packages/jskse_modules"]

[workspace.dependencies]
boa_engine = "0.17.3"
chardet = "0.2.4"
cxx = { version = "1.0.110", features = ["c++20"] }
encoding-next = "0.3.0"
log = "0.4.20"
rust-ini = "0.20.0"
simplelog = "0.12.1"

[profile.release]
debug = true
