[package]
name = "jskse_core"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for JSKSE plugins"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
chardet = "0.2.4"
cxx = { version = "1.0.110", features = ["c++20"] }
deno_ast = { version = "0.42", features = ["transpiling"] }
deno_core = "0.327"
reqwest = "0.12"
encoding-next = "0.3.0"
log = "0.4.20"
rust-ini = "0.20.0"
serde = "1.0.216"
serde_json = "1.0.134"
simplelog = "0.12.1"
anyhow = "1.0.95"
dirs = "5.0.1"
windows = { version = "0.58.0", features = [
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
] }

[build-dependencies]
cxx-build = "1.0.110"
deno_core = "0.327"
cbindgen = "0.27.0"

[profile.release]
debug = true
