[package]
name = "jskse_modules"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Modules library for JSKSE plugins"

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
boa_engine.workspace = true
chardet.workspace = true
cxx.workspace = true
encoding-next.workspace = true
log.workspace = true
rust-ini.workspace = true
simplelog.workspace = true

[profile.release]
debug = true
