[package]
name = "skse_bindings"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bindings for SKSE plugins"

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
cxx.workspace = true
chardet.workspace = true
encoding-next.workspace = true
log.workspace = true
simplelog.workspace = true
